Implementing /people/me
